[project]
name = "supply-match"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "dvc>=3.67.1",
    "evidently>=0.7.21",
    "faiss-cpu>=1.14.2",
    "fastapi>=0.136.3",
    "fastparquet>=2026.5.0",
    "mlflow>=3.10,<3.11",
    "pandas>=3.0.3",
    "sentence-transformers>=5.5.1",
    "uvicorn[standard]>=0.49.0",
]

[tool.uv]
# mlflow 3.x metadata caps pandas<3, but it only touches pandas for
# search_runs / artifact views — not for log_param/log_metric. We keep
# pandas 3 (the rest of the pipeline is built on it) and override the cap.
override-dependencies = ["pandas>=3.0.3"]
